adicionada animação flip ao abrir as cartas

--- a/css/app.css
+++ b/css/app.css
@@ -100,6 +100,10 @@ h1 {
 	transform: rotateY(0);
 	background: #02b3e4;
 	cursor: default;
+	animation-name: flipInY;
+	-webkit-backface-visibility: visible !important;
+	backface-visibility: visible !important;
+	animation-duration: .75s;
 }
 
 .deck .card.show {
