--- a/css/app.css
+++ b/css/app.css
@@ -33,8 +33,8 @@ h1 {
 }
 
 .show {
-	visibility: visible;
-	opacity: 1;
+	visibility: visible !important;
+	opacity: 1 !important;
 }
 
 /* Score Panel */
