link da imagem corrigido no css + README.md feito

--- a/css/app.css
+++ b/css/app.css
@@ -17,7 +17,7 @@ body {
 }
 
 body {
-	background: white url(/img/geometry.png);
+	background: white url(../img/geometry.png);
 	font-family: Coda, cursive;
 }
 
